RESOLVED FIXED185510
[GStreamer] Fix style issue in MediaPlayerPrivateGStreamerBase
https://bugs.webkit.org/show_bug.cgi?id=185510
Summary [GStreamer] Fix style issue in MediaPlayerPrivateGStreamerBase
Thibault Saunier
Reported 2018-05-10 05:41:32 PDT
.
Attachments
[GStreamer] Fix style issue in MediaPlayerPrivateGStreamerBase (4.40 KB, patch)
2018-05-10 05:44 PDT, Thibault Saunier
no flags
[GStreamer] Fix style issue in MediaPlayerPrivateGStreamerBase (4.34 KB, patch)
2018-05-14 07:29 PDT, Thibault Saunier
no flags
Thibault Saunier
Comment 1 2018-05-10 05:44:22 PDT
Created attachment 340085 [details] [GStreamer] Fix style issue in MediaPlayerPrivateGStreamerBase ERROR: Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.cpp:629: More than one command on the same line [whitespace/newline] [4] ERROR: Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.cpp:684: More than one command on the same line [whitespace/newline] [4] ERROR: Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.cpp:807: More than one command on the same line [whitespace/newline] [4]
Philippe Normand
Comment 2 2018-05-14 07:13:29 PDT
Comment on attachment 340085 [details] [GStreamer] Fix style issue in MediaPlayerPrivateGStreamerBase View in context: https://bugs.webkit.org/attachment.cgi?id=340085&action=review > Source/WebCore/ChangeLog:8 > + [GStreamer] Fix style issue in MediaPlayerPrivateGStreamerBase Please remove this line
Thibault Saunier
Comment 3 2018-05-14 07:29:02 PDT
Created attachment 340314 [details] [GStreamer] Fix style issue in MediaPlayerPrivateGStreamerBase >> Source/WebCore/ChangeLog:8 >> + [GStreamer] Fix style issue in MediaPlayerPrivateGStreamerBase > > Please remove this line Done.
WebKit Commit Bot
Comment 4 2018-05-14 09:18:42 PDT
Comment on attachment 340314 [details] [GStreamer] Fix style issue in MediaPlayerPrivateGStreamerBase Clearing flags on attachment: 340314 Committed r231759: <https://trac.webkit.org/changeset/231759>
WebKit Commit Bot
Comment 5 2018-05-14 09:18:43 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2018-05-14 09:19:16 PDT
Note You need to log in before you can comment on or make changes to this bug.